Creato con Colaboratory

--- a/R_code_land_cover.ipynb
+++ b/R_code_land_cover.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_land_cover.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOnuY6Bkr3HoXk737Y/04Rn"
+      "authorship_tag": "ABX9TyMEnHiCYo5TjYn+TGzsWZyH"
     },
     "kernelspec": {
       "name": "ir",
@@ -198,7 +198,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 170
         },
-        "outputId": "56bf1255-bad9-49e6-906b-7e673939fe61"
+        "outputId": "9f217ee6-ad7f-4252-e0db-799855147f8f"
       },
       "source": [
         "names(mato_grosso_1992) <- c(\"nir\", \"red\", \"green\")\n",
@@ -270,7 +270,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 170
         },
-        "outputId": "6f97706f-1fa5-4b0e-e0da-f01ef1d6cf6c"
+        "outputId": "6098950a-ce99-4813-cbb0-9c885232021a"
       },
       "source": [
         "mato_grosso_2006.res <- aggregate(mato_grosso_2006, fun=mean, fact=2)\n",
@@ -350,7 +350,7 @@
         "p2 <- ggRGB(mato_grosso_2006.res, r=1, g=2, b=3, stretch=\"lin\")\n",
         "grid.arrange(p1, p2, nrow=1)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -382,7 +382,7 @@
         "set.seed(1234)\n",
         "mato_grosso_1992.class <- RStoolbox::unsuperClass(mato_grosso_1992, nClasses=3)"
       ],
-      "execution_count": 38,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -402,13 +402,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 437
         },
-        "outputId": "c43ab364-82db-4890-a84d-1bed5a630986"
+        "outputId": "72aed4da-1ace-41c8-c767-173566abcdac"
       },
       "source": [
         "cl <- colorRampPalette(c('yellow','blue','red'))(3)\n",
         "plot(mato_grosso_1992.class$map, col=cl)"
       ],
-      "execution_count": 39,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -436,10 +436,12 @@
       "source": [
         "The spatial patterns identified represent the main land cover classes:\n",
         "* yellow indicates agricultural areas (cluster 1);\n",
-        "* and finally blue indicates waterways and wetlands cultivated with rice (cluster 2);\n",
-        "* red indicates forest (cluster 3).\n",
+        "* blue indicates waterways and wetlands cultivated with rice (cluster 2);\n",
+        "* and finally red indicates forest (cluster 3).\n",
         "\n",
-        "Typically, unsupervised algorithms make inferences from datasets using only input vectors without referring to known or labeled results. Therefore the content of each class should be validated in the field or compared with other data demonstrating belonging to the chosen land cover type. This step is very important and is useful for defining the accuracy of the classification model used."
+        "Typically, unsupervised algorithms make inferences from datasets using only input vectors without referring to known or labeled results. Therefore the content of each class should be validated in the field or compared with other data demonstrating belonging to the chosen land cover type. This step is very important and is useful for defining the accuracy of the classification model used.\n",
+        "\n",
+        "Repeat the same procedure for the 2006 image."
       ]
     },
     {
@@ -450,7 +452,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 437
         },
-        "outputId": "03514aea-722e-4344-cf76-3d2aa217b1a0"
+        "outputId": "a01d95e0-4739-45fc-d895-e12825c6a20e"
       },
       "source": [
         "set.seed(23489)\n",
@@ -458,7 +460,7 @@
         "cl2 <- colorRampPalette(c('yellow','blue','red'))(3)\n",
         "plot(mato_grosso_2006.res.class$map, col=cl2)"
       ],
-      "execution_count": 106,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -484,9 +486,7 @@
         "id": "0jS53c93KAhF"
       },
       "source": [
-        "Also in this case the application of the same scheme seen previously facilitates the visual comparison.\n",
-        "\n",
-        "\n"
+        "Also in this case apply the same number of clusters and type of colors to facilitate the visual comparison."
       ]
     },
     {
@@ -496,9 +496,10 @@
       },
       "source": [
         "## How much forest area has been lost?\n",
-        "Raster images are made up of pixels whose number and extent are known to us. Calculate the pixel frequency for each type of land cover or area knowing that each pixel has an extension of 30 m.\n",
+        "Raster images are made up of pixels whose number and extent are known to us. Calculate the pixel frequency for each type of land cover or area knowing that each pixel has the same 30 m span.\n",
         "\n",
-        "In statistics the frequency (or absolute frequency) of an event $i$ is the number $n_{i}$ of times the observation occurred/recorded in an experiment or study. Generate a frequency table using the [freq](https://www.rdocumentation.org/packages/questionr/versions/0.7.4/topics/freq) function."
+        "In statistics the frequency (or absolute frequency) of an event $i$ is the number $n_{i}$ of times the observation occurred/recorded in an experiment or study. Generate a frequency table using the [freq](https://www.rdocumentation.org/packages/questionr/versions/0.7.4/topics/freq) function.\n",
+        "Multiply the obtained matrix by the spatial resolution of each pixel (30 m) to obtain the absolute area."
       ]
     },
     {
@@ -507,8 +508,14 @@
         "id": "gs8RT2GB0DKG"
       },
       "source": [
+        "pixel_resolution <- 30*30 # square meters\n",
         "absolute_frequency_1992 <- freq(mato_grosso_1992.class$map) \n",
-        "absolute_frequency_1992"
+        "area_km2 <- absolute_frequency_1992[,2] * pixel_resolution / 10^6 # from meters to square kilometers\n",
+        "area_km2\n",
+        "\n",
+        "# Agricolture = 350.88 km^2\n",
+        "# Wetland = 179.86 km^2\n",
+        "# Forest = 1089.26 km^2"
       ],
       "execution_count": null,
       "outputs": []
@@ -519,33 +526,58 @@
         "id": "oYwIdA1wgk2p"
       },
       "source": [
-        "Now calculate the relative frequency (or empirical probability) by dividing the number of counts or the absolute frequency by the total number of events:\n",
+        "To compare the surface variations between the two images it is necessary to normalize the absolute area, dividing by the total area. This means calculating the relative frequency (or empirical probability) of the pixels within each land cover class. At this point you can simply divide the number of counts or the absolute frequency by the total number of events:\n",
         "\n",
-        "$$f_{i}={\\frac{n_{i}}{N}}={\\frac{n_{i}}{\\sum_{j}n_{j}}}$$\n",
+        "$$f_{i}={\\frac{n_{i}{r_s}}{{N}{r_s}}}={\\frac{n_{i}}{\\sum_{j}n_{j}}}$$\n",
         "\n",
-        "It also renames the three clusters by assigning the respective land cover to each of them.\n",
-        "\n",
-        "Use the [data.frame](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/data.frame) function to create a data frame, a matrix-like structure whose columns may be of differing types (numeric, logical, factor and character and so on)."
+        "where $r_s$ is the spatial resolution of each pixel. Now use the simplified formula to calculate the relative area or frequency.\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 190
-        },
-        "id": "AtAKWhMhhBul",
-        "outputId": "f96131e9-11bc-4a2d-cf1b-31be151cf218"
+        "id": "AtAKWhMhhBul"
       },
       "source": [
         "total_pixel_1992 <- sum(absolute_frequency_1992[,2]) \n",
-        "relative_frequency_1992 <- absolute_frequency_1992[,2]/total_pixel_1992\n",
+        "relative_frequency_1992 <- absolute_frequency_1992[,2]/total_pixel_1992"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ClAVT8mpqtTy"
+      },
+      "source": [
+        "Rename the three clusters by assigning each of them their respective land cover.\n",
+        "\n",
+        "* **Agricolture** = cluster **1**\n",
+        "* **Wetlands** = cluster **2**\n",
+        "* **Forest** = cluster **3**\n",
+        "\n",
+        "\n",
+        "Use the [data.frame](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/data.frame) function to create a data frame, a matrix-like structure whose columns may be of differing types (numeric, logical, factor and character and so on).\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "08AT9utVq794",
+        "outputId": "d99bc1f0-9af2-4fbb-b058-461f73eda298",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 190
+        }
+      },
+      "source": [
         "labels <- c(\"Agriculture\", \"Wetlands\", \"Forest\")\n",
         "data_freq_1992 <- data.frame(cover = labels, count = relative_frequency_1992)\n",
         "data_freq_1992"
       ],
-      "execution_count": 119,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "display_data",
@@ -585,7 +617,7 @@
         "id": "-kWJHiOou3SN"
       },
       "source": [
-        "In 1992 the Mato Grosso area was mainly covered by woods with a coverage of about 63%. Only 22% was used for agriculture.\n",
+        "In 1992 the Mato Grosso area was mainly covered by woods with a coverage of about 67%. Only 22% was used for agriculture.\n",
         "\n",
         "Apply the same procedure to the 2006 image."
       ]
@@ -596,11 +628,26 @@
         "id": "CY2TFaFrum4A"
       },
       "source": [
+        "pixel_resolution <- 30*30 # square meters\n",
         "absolute_frequency_2006 <- freq(mato_grosso_2006.res.class$map) \n",
-        "absolute_frequency_2006"
+        "area_km2 <- absolute_frequency_2006[,2] * pixel_resolution / 10^6 # from meters to square kilometers\n",
+        "area_km2\n",
+        "\n",
+        "# Agricolture = 631.47 km^2\n",
+        "# Wetland = 361.03 km^2\n",
+        "# Forest = 627.50 km^2"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "W49rcXlFxj82"
+      },
+      "source": [
+        "Normalize the area for later comparison."
+      ]
     },
     {
       "cell_type": "code",
@@ -610,7 +657,7 @@
           "height": 190
         },
         "id": "AuDDwiCiv2wD",
-        "outputId": "d26888c7-1348-4101-89c1-d17e86333e00"
+        "outputId": "fc307424-a537-48ff-8d72-87df01a8aef9"
       },
       "source": [
         "total_pixel_2006 <- sum(absolute_frequency_2006[,2]) \n",
@@ -619,7 +666,7 @@
         "data_freq_2006 <- data.frame(cover = labels, count = relative_frequency_2006)\n",
         "data_freq_2006"
       ],
-      "execution_count": 118,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "display_data",
@@ -659,7 +706,8 @@
         "id": "viI5E1KIy0Sa"
       },
       "source": [
-        "In 2006 the frequencies changed in favor of the agricultural class with a coverage of 39%. Consider that the class called `\"Wetlands\"` includes both areas cultivated with rice and waterways. While the forest area has shrunk by a third."
+        "In 2006 the frequencies changed in favor of the agricultural class with a coverage of 39%. Consider that the class called `\"Wetlands\"` includes both areas cultivated with rice and waterways. While the forest area has shrunk by a third.\n",
+        "\n"
       ]
     },
     {
@@ -668,40 +716,39 @@
         "id": "S8YWkdVF0Ps2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 190
+          "height": 159
         },
-        "outputId": "bb8b998c-a85e-40d2-cd66-70fd8b34e071"
+        "outputId": "34fd9e9e-595e-452d-8856-7374bcdde390"
       },
       "source": [
-        "merge_freq <- cbind.data.frame(cover=labels, \n",
-        "                               freq_1992=data_freq_1992$count, \n",
-        "                               freq_2006=data_freq_2006$count)\n",
+        "merge_freq <- cbind(cover=labels, \n",
+        "                    freq_1992=round(data_freq_1992$count,4), \n",
+        "                    freq_2006=round(data_freq_2006$count,4))\n",
         "merge_freq "
       ],
-      "execution_count": 154,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "  cover       freq_1992 freq_2006\n",
-              "1 Agriculture 0.2165933 0.3897956\n",
-              "2 Wetlands    0.1110228 0.2228594\n",
-              "3 Forest      0.6723839 0.3873450"
+              "     cover       freq_1992 freq_2006\n",
+              "[1,] Agriculture 0.2166    0.3898   \n",
+              "[2,] Wetlands    0.111     0.2229   \n",
+              "[3,] Forest      0.6724    0.3873   "
             ],
-            "text/latex": "A data.frame: 3 × 3\n\\begin{tabular}{lll}\n cover & freq\\_1992 & freq\\_2006\\\\\n <chr> & <dbl> & <dbl>\\\\\n\\hline\n\t Agriculture & 0.2165933 & 0.3897956\\\\\n\t Wetlands    & 0.1110228 & 0.2228594\\\\\n\t Forest      & 0.6723839 & 0.3873450\\\\\n\\end{tabular}\n",
-            "text/markdown": "\nA data.frame: 3 × 3\n\n| cover &lt;chr&gt; | freq_1992 &lt;dbl&gt; | freq_2006 &lt;dbl&gt; |\n|---|---|---|\n| Agriculture | 0.2165933 | 0.3897956 |\n| Wetlands    | 0.1110228 | 0.2228594 |\n| Forest      | 0.6723839 | 0.3873450 |\n\n",
+            "text/latex": "A matrix: 3 × 3 of type chr\n\\begin{tabular}{lll}\n cover & freq\\_1992 & freq\\_2006\\\\\n\\hline\n\t Agriculture & 0.2166 & 0.3898\\\\\n\t Wetlands    & 0.111  & 0.2229\\\\\n\t Forest      & 0.6724 & 0.3873\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA matrix: 3 × 3 of type chr\n\n| cover | freq_1992 | freq_2006 |\n|---|---|---|\n| Agriculture | 0.2166 | 0.3898 |\n| Wetlands    | 0.111  | 0.2229 |\n| Forest      | 0.6724 | 0.3873 |\n\n",
             "text/html": [
               "<table class=\"dataframe\">\n",
-              "<caption>A data.frame: 3 × 3</caption>\n",
+              "<caption>A matrix: 3 × 3 of type chr</caption>\n",
               "<thead>\n",
               "\t<tr><th scope=col>cover</th><th scope=col>freq_1992</th><th scope=col>freq_2006</th></tr>\n",
-              "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
               "</thead>\n",
               "<tbody>\n",
-              "\t<tr><td>Agriculture</td><td>0.2165933</td><td>0.3897956</td></tr>\n",
-              "\t<tr><td>Wetlands   </td><td>0.1110228</td><td>0.2228594</td></tr>\n",
-              "\t<tr><td>Forest     </td><td>0.6723839</td><td>0.3873450</td></tr>\n",
+              "\t<tr><td>Agriculture</td><td>0.2166</td><td>0.3898</td></tr>\n",
+              "\t<tr><td>Wetlands   </td><td>0.111 </td><td>0.2229</td></tr>\n",
+              "\t<tr><td>Forest     </td><td>0.6724</td><td>0.3873</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ]
@@ -724,12 +771,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7Fep7BjLwMMP",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "5690f93c-372f-4376-fdb0-b336bbbfb9b1"
+        "id": "7Fep7BjLwMMP"
       },
       "source": [
         "pdf(file = \"/content/compare_hist.pdf\")\n",
@@ -738,26 +780,8 @@
         "grid.arrange(p_1992, p_2006, nrow=1)\n",
         "dev.off()"
       ],
-      "execution_count": 164,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "png \n",
-              "  2 "
-            ],
-            "text/latex": "\\textbf{png:} 2",
-            "text/markdown": "**png:** 2",
-            "text/html": [
-              "<strong>png:</strong> 2"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
