Creato con Colaboratory

--- a/R_code_land_cover.ipynb
+++ b/R_code_land_cover.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_land_cover.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPI7GgAwBqSc5KBnB+WjSzL"
+      "authorship_tag": "ABX9TyM4zOEWTM/C/6hmywFKd8CA"
     },
     "kernelspec": {
       "name": "ir",
@@ -530,7 +530,9 @@
         "\n",
         "$$f_{i}={\\frac{n_{i}{r_s}}{{N}{r_s}}}={\\frac{n_{i}}{\\sum_{j}n_{j}}}$$\n",
         "\n",
-        "where $r_s$ is the spatial resolution of each pixel. Now use the simplified formula to calculate the relative area or frequency.\n",
+        "where $r_s$ is the spatial resolution of each pixel. \n",
+        "\n",
+        "Now use the simplified formula to calculate the normalized area or relative frequency.\n",
         "\n"
       ]
     },
