Creato con Colaboratory

--- a/R_code_variability.ipynb
+++ b/R_code_variability.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_variability.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNwSkXr9lxviAkUWcykak3s"
+      "authorship_tag": "ABX9TyOeICSC9pNo38BoGf/P6YwQ"
     },
     "kernelspec": {
       "name": "ir",
@@ -35,8 +35,24 @@
         "id": "ogUWfe8SSlih"
       },
       "source": [
-        "# Similaun glacier"
+        "# Similaun glacier\n",
+        "To learn the techniques for visualizing spatial variability, use Sentinel images of the Similaun and Ortles glaciers in Italy. This region is important not only for its rich geobiodiversity but also for its fascinating archaeological history, also due to an incredible anthropological discovery of the early 1990s: the famous Tyrolean ice man Ötzi.\n",
+        "\n",
+        "DATA: Copernicus Sentinel-2A with a spatial resolution of 10m and acquired on May 9th 2020.\n",
+        "\n",
+        "The Copernicus Sentinel-2 image used in this document can be downloaded for free from [Copernicus Open Access Hub](https://scihub.copernicus.eu/), image box reference: S2A_MSIL2A_20200905T101031_N0214_R022_T32TPS_20200905T130252"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qqkb3_I352cM"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
