--- a/R_code_vegetation_indices.ipynb
+++ b/R_code_vegetation_indices.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "R_code_vegetation_indices.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOIqIiuqrGpZHFYlFF5SKNi"
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyND2opYtvBByqEt0gFPU+X0"
     },
     "kernelspec": {
       "name": "ir",
@@ -32,67 +33,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_UkpOdo-8YBw"
+        "id": "DemO_D4DNTOw"
       },
       "source": [
-        "# Deforestation in Mato Grosso, Brazil\n",
+        "# Vegetation reflectance\n",
+        "Vegetation absorbs solar radiation in different bands, that is in different frequency ranges and wavelengths, and emits a different percentage of it back into them. \n",
+        "The percentage of refracted radiation varies with plant health and water stress.\n",
         "\n",
-        "An inland state of central Brazil, deep in the Amazon interior, Mato Grosso was long isolated from the outside world. A railroad, followed by highways and airplanes, eventually connected this state with other regions in the twentieth century. By the early twenty-first century, modern technology had clearly reached Mato Grosso and produced widespread change.\n",
-        "\n",
-        "The Thematic Mapper on NASA’s Landsat 5 satellite captured the top image of part of Mato Grosso on August 6, 1992. The Advanced Spaceborne Thermal Emission and Reflection Radiometer (ASTER) on NASA’s Terra satellite captured the bottom image of the same area on July 28, 2006. In both of these false-color images, red indicates vegetation, and the brighter the red, the denser the vegetation. The Rio Peixoto de Azevedo appears pale blue, nearly white, in 1992, perhaps a combination of reflective sediment or sunlight glinting off the water.\n",
-        "\n",
-        "The most conspicuous difference between the images is the widespread forest clearing—visible as rectangles of gray-beige that had occurred by 2006. The most intense areas of clearing appear along roadways, such as road MT-419, which runs east to west north of the river. A 2006 study found that Brazil’s mechanized agriculture increased by more than 3.6 million hectares (8.9 million acres) between 2001 and 2004, growing more than 540,000 hectares (1.3 million acres) in Mato Grosso alone. Clearing for pasture was still the leading cause of deforestation at that time, but the contribution from large agricultural clearings, such as for soy plantations, was increasing.\n",
-        "\n",
-        "<table>\n",
-        "  <tr>\n",
-        "     <td>Mato Grosso on August 6, 1992</td>\n",
-        "     <td>Mato Grosso on July 28, 2006</td>\n",
-        "  </tr>\n",
-        "  <tr>\n",
-        "    <td><img src=\"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_l5_1992219_lrg.jpg\" width=500</td>\n",
-        "    <td><img src=\"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_ast_2006209_lrg.jpg\" width=500</td>\n",
-        "  </tr>\n",
-        "</table>\n",
-        "\n",
-        "<font size=\"2\"> [*NASA images*](https://earthobservatory.nasa.gov/images/35891/deforestation-in-mato-grosso-brazil) *created by Jesse Allen, using Landsat data provided by the United States Geological Survey and ASTER data provided courtesy of NASA/GSFC/METI/ERSDAC/JAROS, and U.S./Japan ASTER Science Team. Caption by Michon Scott.*</font> "
+        "![](https://skclivinglandscapes.org/remote_sensing/page-2/files/small_1409.png)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sIBZqCaW5Xuz"
-      },
-      "source": [
-        "mato_grosso_1992_url <- \"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_l5_1992219_lrg.jpg\"\n",
-        "mato_grosso_2006_url <- \"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_ast_2006209_lrg.jpg\""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "CWcyue8oJuZe"
-      },
-      "source": [
-        "The [download.file](https://www.rdocumentation.org/packages/utils/versions/3.6.2/topics/download.file) function can be used to download a file from the Internet. \n",
-        "```\n",
-        "download.file(url, destfile)\n",
-        "```\n",
-        "In the function the `url` argument sets the resource to be downloaded and the `destfile` a character string with which the downloaded file is named."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2VwQSAU5NkR_"
-      },
-      "source": [
-        "download.file(mato_grosso_1992_url, \"Mato_Grosso_1992.jpg\")\n",
-        "download.file(mato_grosso_2006_url, \"Mato_Grosso_2006.jpg\")"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -144,6 +93,71 @@
       },
       "source": [
         "lapply(packages , library, character.only = TRUE)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_UkpOdo-8YBw"
+      },
+      "source": [
+        "## Study area\n",
+        "\n",
+        "An inland state of central Brazil, deep in the Amazon interior, Mato Grosso was long isolated from the outside world. A railroad, followed by highways and airplanes, eventually connected this state with other regions in the twentieth century. By the early twenty-first century, modern technology had clearly reached Mato Grosso and produced widespread change.\n",
+        "\n",
+        "The Thematic Mapper on NASA’s Landsat 5 satellite captured the top image of part of Mato Grosso on August 6, 1992. The Advanced Spaceborne Thermal Emission and Reflection Radiometer (ASTER) on NASA’s Terra satellite captured the bottom image of the same area on July 28, 2006. In both of these false-color images, red indicates vegetation, and the brighter the red, the denser the vegetation. The Rio Peixoto de Azevedo appears pale blue, nearly white, in 1992, perhaps a combination of reflective sediment or sunlight glinting off the water.\n",
+        "\n",
+        "The most conspicuous difference between the images is the widespread forest clearing—visible as rectangles of gray-beige that had occurred by 2006. The most intense areas of clearing appear along roadways, such as road MT-419, which runs east to west north of the river. A 2006 study found that Brazil’s mechanized agriculture increased by more than 3.6 million hectares (8.9 million acres) between 2001 and 2004, growing more than 540,000 hectares (1.3 million acres) in Mato Grosso alone. Clearing for pasture was still the leading cause of deforestation at that time, but the contribution from large agricultural clearings, such as for soy plantations, was increasing.\n",
+        "\n",
+        "<table>\n",
+        "  <tr>\n",
+        "     <td>Mato Grosso on August 6, 1992</td>\n",
+        "     <td>Mato Grosso on July 28, 2006</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td><img src=\"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_l5_1992219_lrg.jpg\" width=500</td>\n",
+        "    <td><img src=\"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_ast_2006209_lrg.jpg\" width=500</td>\n",
+        "  </tr>\n",
+        "</table>\n",
+        "\n",
+        "<font size=\"2\"> [*NASA images*](https://earthobservatory.nasa.gov/images/35891/deforestation-in-mato-grosso-brazil) *created by Jesse Allen, using Landsat data provided by the United States Geological Survey and ASTER data provided courtesy of NASA/GSFC/METI/ERSDAC/JAROS, and U.S./Japan ASTER Science Team. Caption by Michon Scott.*</font> "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sIBZqCaW5Xuz"
+      },
+      "source": [
+        "mato_grosso_1992_url <- \"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_l5_1992219_lrg.jpg\"\n",
+        "mato_grosso_2006_url <- \"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_ast_2006209_lrg.jpg\""
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CWcyue8oJuZe"
+      },
+      "source": [
+        "The [download.file](https://www.rdocumentation.org/packages/utils/versions/3.6.2/topics/download.file) function can be used to download a file from the Internet. \n",
+        "```\n",
+        "download.file(url, destfile)\n",
+        "```\n",
+        "In the function the `url` argument sets the resource to be downloaded and the `destfile` a character string with which the downloaded file is named."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2VwQSAU5NkR_"
+      },
+      "source": [
+        "download.file(mato_grosso_1992_url, \"Mato_Grosso_1992.jpg\")\n",
+        "download.file(mato_grosso_2006_url, \"Mato_Grosso_2006.jpg\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -266,7 +280,7 @@
         "id": "PON7qgfLRyY_"
       },
       "source": [
-        "### Visualization of spatial data\n",
+        "## Visualization of spatial data\n",
         "Several generic functions have been implemented for \"raster\" objects to create maps and other plot types. For example, use [plot](https://www.rdocumentation.org/packages/raster/versions/3.4-5/topics/plot) function to create a map of a raster object.\n",
         "In addition, individual bands can be combined into a single image by assigning individual layers or bands to one of the three color channels (red, green and blue). \n",
         "The [plotRGB](https://www.rdocumentation.org/packages/raster/versions/3.4-5/topics/plotRGB) function can be used to make \"true (or false) color images\" from multi-band satellite images.\n",
@@ -295,12 +309,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "DemO_D4DNTOw"
+        "id": "inJ2Aw_1PiX1"
       },
       "source": [
-        "## Vegetation indices\n",
-        "Vegetation indices are designed to maximize sensitivity to the vegetation characteristics while minimizing confounding factors such as soil background reflectance, directional, or atmospheric effects.\n",
-        "The most commonly used vegetation indices utilize the information contained in the red and near-infrared (NIR) canopy reflectances or radiances.\n"
+        "## Vegetation indices  \n",
+        "Vegetation indices are designed to maximize sensitivity to the vegetation characteristics while minimizing confounding factors such as soil background reflectance, directional, or atmospheric effects. The most commonly used vegetation indices utilize the information contained in the red and near-infrared (NIR) canopy reflectances or radiances."
       ]
     },
     {
@@ -377,33 +390,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ulOVVfBb-5XC"
-      },
-      "source": [
-        "#### Time-difference images\n",
-        "Visualize the areas with the greatest forest loss by calculating the difference in the Mato Grosso DVI index between 1992 and 2006.\n",
-        "In this case, shades of red indicate areas of greatest forest loss with much higher DVI values in 1992 than in 2006.\n",
-        "Conversely, all areas with lower DVI values in 1992 than in 2006 have negative values and appear in shades of blue. While all those areas with similar DVI values for both 1992 and 2006 appear white.\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "CH30ZUz04MXn"
-      },
-      "source": [
-        "pdf(file='/content/difference_dvi.pdf')\n",
-        "dif_dvi <- dvi_1992 - dvi_2006\n",
-        "cld <- colorRampPalette(c('blue','white','red'))(300)\n",
-        "plot(dif_dvi, col=cld, axes=FALSE)\n",
-        "dev.off()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "NU9RGKOENcG1"
       },
       "source": [
@@ -432,9 +418,53 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "B_40F4qCJfiz"
+      },
+      "source": [
+        "pdf(file = '/content/compare_ndvi.pdf')\n",
+        "par(mfrow=c(1,2))\n",
+        "plot(ndvi_1992, col=cl, main=\"NDVI at time 1992\")\n",
+        "plot(ndvi_2006, col=cl, main=\"NDVI at time 2006\")\n",
+        "dev.off()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ulOVVfBb-5XC"
+      },
+      "source": [
+        "## Time difference vegetation images\n",
+        "Visualize the areas with the greatest forest loss by calculating the difference in the VIs of Mato Grosso between 1992 and 2006.\n",
+        "In this case, shades of red indicate areas of greatest forest loss with much higher VI values in 1992 than in 2006.\n",
+        "Conversely, all areas with lower VI values in 1992 than in 2006 have negative values and appear in shades of blue. While all those areas with similar VI values for both 1992 and 2006 appear white.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CH30ZUz04MXn"
+      },
+      "source": [
+        "# DVI\n",
+        "pdf(file='/content/difference_dvi.pdf')\n",
+        "dif_dvi <- dvi_1992 - dvi_2006\n",
+        "cld <- colorRampPalette(c('blue','white','red'))(300)\n",
+        "plot(dif_dvi, col=cld, axes=FALSE)\n",
+        "dev.off()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "BuvOSb-bmQBI"
       },
       "source": [
+        "# NDVI\n",
         "pdf(file = \"/content/difference_ndvi.pdf\")\n",
         "dif_ndvi <- ndvi_1992 - ndvi_2006\n",
         "cld <- colorRampPalette(c('blue','white','red'))(100)\n",
@@ -450,7 +480,7 @@
         "id": "VG20D5m6bTVk"
       },
       "source": [
-        "### Other vegetation indices\n",
+        "## Other vegetation indices\n",
         "Various vegetation indices are proposed in the literature to emphasize a specific characteristic of the vegetation or to minimize the influence of other factors.\n",
         "\n",
         "In general, the vegetation indices can be divided into several categories:\n",
