Creato con Colaboratory

--- a/R_code_vegetation_indices.ipynb
+++ b/R_code_vegetation_indices.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "R_code_vegetation_indices.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyND2opYtvBByqEt0gFPU+X0"
+      "authorship_tag": "ABX9TyNF8aEGSJkwNKf0a09LXraT"
     },
     "kernelspec": {
       "name": "ir",
@@ -40,7 +39,70 @@
         "Vegetation absorbs solar radiation in different bands, that is in different frequency ranges and wavelengths, and emits a different percentage of it back into them. \n",
         "The percentage of refracted radiation varies with plant health and water stress.\n",
         "\n",
-        "![](https://skclivinglandscapes.org/remote_sensing/page-2/files/small_1409.png)"
+        "<p align=\"center\">\n",
+        "  <img width=\"500\" height=\"300\" src=\"https://skclivinglandscapes.org/remote_sensing/page-2/files/small_1409.png\">\n",
+        "</p>\n",
+        "\n",
+        "To understand the use of vegetation reflectance in remote sensing we use the image of [Mato Grosso](https://earthobservatory.nasa.gov/images/35891/deforestation-in-mato-grosso-brazil) in Brazil. In particular, the satellite images of the same area collected in 1992 and 2006 will be used.\n",
+        "The [1992](https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_l5_1992219_lrg.jpg) image was acquired on August 6 using the Thematic Mapper sensor aboard NASA's Landsat 5 satellite. The [2006](https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_ast_2006209_lrg.jpg) image was detected on July 28 by the Advanced Spaceborne Thermal Emission and Reflection Radiometer (ASTER) sensor on NASA's Terra satellite.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sIBZqCaW5Xuz"
+      },
+      "source": [
+        "mato_grosso_1992_url <- \"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_l5_1992219_lrg.jpg\"\n",
+        "mato_grosso_2006_url <- \"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_ast_2006209_lrg.jpg\""
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CWcyue8oJuZe"
+      },
+      "source": [
+        "The [download.file](https://www.rdocumentation.org/packages/utils/versions/3.6.2/topics/download.file) function can be used to download a file from the Internet. \n",
+        "```\n",
+        "download.file(url, destfile)\n",
+        "```\n",
+        "In the function the `url` argument sets the resource to be downloaded and the `destfile` a character string with which the downloaded file is named."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2VwQSAU5NkR_"
+      },
+      "source": [
+        "download.file(mato_grosso_1992_url, \"Mato_Grosso_1992.jpg\")\n",
+        "download.file(mato_grosso_2006_url, \"Mato_Grosso_2006.jpg\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BW1pMkXoUatK"
+      },
+      "source": [
+        "## Study area\n",
+        "\n",
+        "The state of Mato Grosso is home to the Pantanal complex, the largest floodplain in the world, as well as the second largest ecosystem in the world after the neighboring Amazon. \n",
+        "The great biodiversity of these areas is threatened by the recent conversion of wetlands and forests into agricultural areas.\n",
+        "\n",
+        "<p align=\"center\">\n",
+        "  <img  width=\"600\" height=\"300\" src=\"https://hablemosdeaves.com/wp-content/uploads/2020/08/EL-GRAN-PANTANAL-1.jpg\">\n",
+        "</p>\n",
+        "\n",
+        "A 2006 study found that Brazilian mechanized agriculture increased by more than 3.6 million hectares between 2001 and 2004, growing by more than 540.000 hectares in Mato Grosso alone. Logging for grazing was still the main cause of deforestation at the time, but the contribution of large agricultural clearings, such as soybean plantations, was increasing.\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -93,71 +155,6 @@
       },
       "source": [
         "lapply(packages , library, character.only = TRUE)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_UkpOdo-8YBw"
-      },
-      "source": [
-        "## Study area\n",
-        "\n",
-        "An inland state of central Brazil, deep in the Amazon interior, Mato Grosso was long isolated from the outside world. A railroad, followed by highways and airplanes, eventually connected this state with other regions in the twentieth century. By the early twenty-first century, modern technology had clearly reached Mato Grosso and produced widespread change.\n",
-        "\n",
-        "The Thematic Mapper on NASA’s Landsat 5 satellite captured the top image of part of Mato Grosso on August 6, 1992. The Advanced Spaceborne Thermal Emission and Reflection Radiometer (ASTER) on NASA’s Terra satellite captured the bottom image of the same area on July 28, 2006. In both of these false-color images, red indicates vegetation, and the brighter the red, the denser the vegetation. The Rio Peixoto de Azevedo appears pale blue, nearly white, in 1992, perhaps a combination of reflective sediment or sunlight glinting off the water.\n",
-        "\n",
-        "The most conspicuous difference between the images is the widespread forest clearing—visible as rectangles of gray-beige that had occurred by 2006. The most intense areas of clearing appear along roadways, such as road MT-419, which runs east to west north of the river. A 2006 study found that Brazil’s mechanized agriculture increased by more than 3.6 million hectares (8.9 million acres) between 2001 and 2004, growing more than 540,000 hectares (1.3 million acres) in Mato Grosso alone. Clearing for pasture was still the leading cause of deforestation at that time, but the contribution from large agricultural clearings, such as for soy plantations, was increasing.\n",
-        "\n",
-        "<table>\n",
-        "  <tr>\n",
-        "     <td>Mato Grosso on August 6, 1992</td>\n",
-        "     <td>Mato Grosso on July 28, 2006</td>\n",
-        "  </tr>\n",
-        "  <tr>\n",
-        "    <td><img src=\"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_l5_1992219_lrg.jpg\" width=500</td>\n",
-        "    <td><img src=\"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_ast_2006209_lrg.jpg\" width=500</td>\n",
-        "  </tr>\n",
-        "</table>\n",
-        "\n",
-        "<font size=\"2\"> [*NASA images*](https://earthobservatory.nasa.gov/images/35891/deforestation-in-mato-grosso-brazil) *created by Jesse Allen, using Landsat data provided by the United States Geological Survey and ASTER data provided courtesy of NASA/GSFC/METI/ERSDAC/JAROS, and U.S./Japan ASTER Science Team. Caption by Michon Scott.*</font> "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sIBZqCaW5Xuz"
-      },
-      "source": [
-        "mato_grosso_1992_url <- \"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_l5_1992219_lrg.jpg\"\n",
-        "mato_grosso_2006_url <- \"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_ast_2006209_lrg.jpg\""
-      ],
-      "execution_count": 1,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "CWcyue8oJuZe"
-      },
-      "source": [
-        "The [download.file](https://www.rdocumentation.org/packages/utils/versions/3.6.2/topics/download.file) function can be used to download a file from the Internet. \n",
-        "```\n",
-        "download.file(url, destfile)\n",
-        "```\n",
-        "In the function the `url` argument sets the resource to be downloaded and the `destfile` a character string with which the downloaded file is named."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2VwQSAU5NkR_"
-      },
-      "source": [
-        "download.file(mato_grosso_1992_url, \"Mato_Grosso_1992.jpg\")\n",
-        "download.file(mato_grosso_2006_url, \"Mato_Grosso_2006.jpg\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -297,7 +294,7 @@
         "id": "g8DtZq5z3-9m"
       },
       "source": [
-        "pdf(file = '/content/compare.pdf')\n",
+        "# pdf(file = '/content/compare.pdf')\n",
         "par(mfrow=c(1,2))\n",
         "plotRGB(mato_grosso_1992.res, r=1, g=2, b=3, stretch=\"lin\")\n",
         "plotRGB(mato_grosso_2006, r=1, g=2, b=3, stretch=\"lin\")\n",
@@ -309,11 +306,27 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "aqwx1nF3tCtW"
+      },
+      "source": [
+        "In both of these false-color images, red indicates vegetation, and the brighter the red, the denser the vegetation. \n",
+        "The Rio Peixoto de Azevedo appears pale blue, nearly white, in 1992, perhaps a combination of reflective sediment or sunlight glinting off the water.\n",
+        "The most conspicuous difference between the images is the widespread forest clearing visible as rectangles of gray-beige that had occurred by 2006. \n",
+        "The most intense areas of clearing appear along roadways."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "inJ2Aw_1PiX1"
       },
       "source": [
         "## Vegetation indices  \n",
-        "Vegetation indices are designed to maximize sensitivity to the vegetation characteristics while minimizing confounding factors such as soil background reflectance, directional, or atmospheric effects. The most commonly used vegetation indices utilize the information contained in the red and near-infrared (NIR) canopy reflectances or radiances."
+        "Vegetation indices are designed to maximize sensitivity to the vegetation characteristics while minimizing confounding factors such as soil background reflectance, directional, or atmospheric effects. The most commonly used vegetation indices utilize the information contained in the red and near-infrared (NIR) canopy reflectances or radiances.\n",
+        "\n",
+        "<p align=\"center\">\n",
+        "  <img src=\"https://static.eos.com/wp-content/uploads/2020/07/tree.jpg\">\n",
+        "</p>"
       ]
     },
     {
