--- a/R_code_vegetation_indices.ipynb
+++ b/R_code_vegetation_indices.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_vegetation_indices.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMB1VZngtyXF07m6PiS1RI+"
+      "authorship_tag": "ABX9TyMJ3VPj8HVkhIQEeWVSeEro"
     },
     "kernelspec": {
       "name": "ir",
@@ -324,7 +324,9 @@
         "## Vegetation indices  \n",
         "Vegetation indices are designed to maximize sensitivity to the vegetation characteristics while minimizing confounding factors such as soil background reflectance, directional, or atmospheric effects. The most commonly used vegetation indices utilize the information contained in the red and near-infrared (NIR) canopy reflectances or radiances.\n",
         "\n",
-        "![](https://static.eos.com/wp-content/uploads/2020/07/tree.jpg)"
+        "<p align=\"left\">\n",
+        "  <img src=\"https://static.eos.com/wp-content/uploads/2020/07/tree.jpg\">\n",
+        "</p>\n"
       ]
     },
     {
