--- a/R_code_vegetation_indices.ipynb
+++ b/R_code_vegetation_indices.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_vegetation_indices.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMJ3VPj8HVkhIQEeWVSeEro"
+      "authorship_tag": "ABX9TyNn6IF0qE1egmmS1JLOwZnX"
     },
     "kernelspec": {
       "name": "ir",
@@ -40,7 +40,7 @@
         "The percentage of refracted radiation varies with plant health and water stress.\n",
         "\n",
         "<p align=\"center\">\n",
-        "  <img width=\"500\" height=\"300\" src=\"https://skclivinglandscapes.org/remote_sensing/page-2/files/small_1409.png\">\n",
+        "  <img  src=\"https://skclivinglandscapes.org/remote_sensing/page-2/files/small_1409.png\">\n",
         "</p>\n",
         "\n",
         "To understand the use of vegetation reflectance in remote sensing we use the image of [Mato Grosso](https://earthobservatory.nasa.gov/images/35891/deforestation-in-mato-grosso-brazil) in Brazil. In particular, the satellite images of the same area collected in 1992 and 2006 will be used.\n",
@@ -96,7 +96,7 @@
         "The great biodiversity of these areas is threatened by the recent conversion of wetlands and forests into agricultural areas.\n",
         "\n",
         "<p align=\"center\">\n",
-        "  <img  width=\"600\" height=\"300\" src=\"https://hablemosdeaves.com/wp-content/uploads/2020/08/EL-GRAN-PANTANAL-1.jpg\">\n",
+        "  <img   src=\"https://www.sospantanal.org.br/wp-content/uploads/2020/11/PANTANAL_MS_1008_02554.jpg\">\n",
         "</p>\n",
         "\n",
         "A 2006 study found that Brazilian mechanized agriculture increased by more than 3.6 million hectares between 2001 and 2004, growing by more than 540.000 hectares in Mato Grosso alone. Logging for grazing was still the main cause of deforestation at the time, but the contribution of large agricultural clearings, such as soybean plantations, was increasing.\n",
@@ -324,8 +324,8 @@
         "## Vegetation indices  \n",
         "Vegetation indices are designed to maximize sensitivity to the vegetation characteristics while minimizing confounding factors such as soil background reflectance, directional, or atmospheric effects. The most commonly used vegetation indices utilize the information contained in the red and near-infrared (NIR) canopy reflectances or radiances.\n",
         "\n",
-        "<p align=\"left\">\n",
-        "  <img src=\"https://static.eos.com/wp-content/uploads/2020/07/tree.jpg\">\n",
+        "<p align=\"center\">\n",
+        "  <img width=\"700\" height=\"400\"src=\"https://static.eos.com/wp-content/uploads/2020/07/tree.jpg\">\n",
         "</p>\n"
       ]
     },
