Creato con Colaboratory

--- a/R_code_vegetation_indices.ipynb
+++ b/R_code_vegetation_indices.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_vegetation_indices.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNn6IF0qE1egmmS1JLOwZnX"
+      "authorship_tag": "ABX9TyNRxM0u9990bZUrlvhtUi5U"
     },
     "kernelspec": {
       "name": "ir",
@@ -40,7 +40,7 @@
         "The percentage of refracted radiation varies with plant health and water stress.\n",
         "\n",
         "<p align=\"center\">\n",
-        "  <img  src=\"https://skclivinglandscapes.org/remote_sensing/page-2/files/small_1409.png\">\n",
+        "  <img width=\"800\" height=\"400\" src=\"https://skclivinglandscapes.org/remote_sensing/page-2/files/small_1409.png\">\n",
         "</p>\n",
         "\n",
         "To understand the use of vegetation reflectance in remote sensing we use the image of [Mato Grosso](https://earthobservatory.nasa.gov/images/35891/deforestation-in-mato-grosso-brazil) in Brazil. In particular, the satellite images of the same area collected in 1992 and 2006 will be used.\n",
@@ -96,7 +96,7 @@
         "The great biodiversity of these areas is threatened by the recent conversion of wetlands and forests into agricultural areas.\n",
         "\n",
         "<p align=\"center\">\n",
-        "  <img   src=\"https://www.sospantanal.org.br/wp-content/uploads/2020/11/PANTANAL_MS_1008_02554.jpg\">\n",
+        "  <img  width=\"800\" height=\"400\" src=\"https://www.sospantanal.org.br/wp-content/uploads/2020/11/PANTANAL_MS_1008_02554.jpg\">\n",
         "</p>\n",
         "\n",
         "A 2006 study found that Brazilian mechanized agriculture increased by more than 3.6 million hectares between 2001 and 2004, growing by more than 540.000 hectares in Mato Grosso alone. Logging for grazing was still the main cause of deforestation at the time, but the contribution of large agricultural clearings, such as soybean plantations, was increasing.\n",
