--- a/R_code_vegetation_indices.ipynb
+++ b/R_code_vegetation_indices.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_vegetation_indices.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNRxM0u9990bZUrlvhtUi5U"
+      "authorship_tag": "ABX9TyOS/y1wLghCYgqhX789UhOL"
     },
     "kernelspec": {
       "name": "ir",
@@ -92,7 +92,7 @@
       "source": [
         "## Study area\n",
         "\n",
-        "The state of Mato Grosso is home to the Pantanal complex, the largest floodplain in the world, as well as the second largest ecosystem in the world after the neighboring Amazon. \n",
+        "The state of Mato Grosso is home to the Pantanal complex, the largest floodplain in the world, as well as the second largest ecosystem in the world after the nearby Amazon rainforest. \n",
         "The great biodiversity of these areas is threatened by the recent conversion of wetlands and forests into agricultural areas.\n",
         "\n",
         "<p align=\"center\">\n",
