Creato con Colaboratory

--- a/R_code_land_cover.ipynb
+++ b/R_code_land_cover.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_land_cover.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM4zOEWTM/C/6hmywFKd8CA"
+      "authorship_tag": "ABX9TyNjA4z/ltkz0NJRgMBz9p9N"
     },
     "kernelspec": {
       "name": "ir",
@@ -38,12 +38,9 @@
       },
       "source": [
         "# Deforestation in Mato Grosso, Brazil\n",
-        "\n",
-        "An inland state of central Brazil, deep in the Amazon interior, Mato Grosso was long isolated from the outside world. A railroad, followed by highways and airplanes, eventually connected this state with other regions in the twentieth century. By the early twenty-first century, modern technology had clearly reached Mato Grosso and produced widespread change.\n",
-        "\n",
-        "The Thematic Mapper on NASA’s Landsat 5 satellite captured the top image of part of Mato Grosso on August 6, 1992. The Advanced Spaceborne Thermal Emission and Reflection Radiometer (ASTER) on NASA’s Terra satellite captured the bottom image of the same area on July 28, 2006. In both of these false-color images, red indicates vegetation, and the brighter the red, the denser the vegetation. The Rio Peixoto de Azevedo appears pale blue, nearly white, in 1992, perhaps a combination of reflective sediment or sunlight glinting off the water.\n",
-        "\n",
-        "The most conspicuous difference between the images is the widespread forest clearing—visible as rectangles of gray-beige that had occurred by 2006. The most intense areas of clearing appear along roadways, such as road MT-419, which runs east to west north of the river. A 2006 study found that Brazil’s mechanized agriculture increased by more than 3.6 million hectares (8.9 million acres) between 2001 and 2004, growing more than 540,000 hectares (1.3 million acres) in Mato Grosso alone. Clearing for pasture was still the leading cause of deforestation at that time, but the contribution from large agricultural clearings, such as for soy plantations, was increasing.\n",
+        "The state of Mato Grosso is home to the Pantanal complex, the largest floodplain in the world, as well as the second largest ecosystem in the world after the nearby Amazon rainforest. \n",
+        "The great biodiversity of these areas is threatened by the recent conversion of wetlands and forests into agricultural areas.\n",
+        "A 2006 study found that Brazilian mechanized agriculture increased by more than 3.6 million hectares between 2001 and 2004, growing by more than 540.000 hectares in Mato Grosso alone. Logging for grazing was still the main cause of deforestation at the time, but the contribution of large agricultural clearings, such as soybean plantations, was increasing.\n",
         "\n",
         "<table>\n",
         "  <tr>\n",
@@ -56,7 +53,15 @@
         "  </tr>\n",
         "</table>\n",
         "\n",
-        "<font size=\"2\"> [*NASA images*](https://earthobservatory.nasa.gov/images/35891/deforestation-in-mato-grosso-brazil) *created by Jesse Allen, using Landsat data provided by the United States Geological Survey and ASTER data provided courtesy of NASA/GSFC/METI/ERSDAC/JAROS, and U.S./Japan ASTER Science Team. Caption by Michon Scott.*</font> "
+        "<font size=\"2\"> [*NASA images*](https://earthobservatory.nasa.gov/images/35891/deforestation-in-mato-grosso-brazil) *created by Jesse Allen, using Landsat data provided by the United States Geological Survey and ASTER data provided courtesy of NASA/GSFC/METI/ERSDAC/JAROS, and U.S./Japan ASTER Science Team. Caption by Michon Scott.*</font> \n",
+        "\n",
+        "In both of these false-color images, red indicates vegetation, and the brighter the red, the denser the vegetation. \n",
+        "The Rio Peixoto de Azevedo appears pale blue, nearly white, in 1992, perhaps a combination of reflective sediment or sunlight glinting off the water.\n",
+        "The most conspicuous difference between the images is the widespread forest clearing visible as rectangles of gray-beige that had occurred by 2006. \n",
+        "The most intense areas of clearing appear along roadways.\n",
+        "\n",
+        "Use the images shown above to quantify the forest area lost over the past 14 years.\n",
+        "The 1992 image was captured using the Thematic Mapper sensor aboard NASA's Landsat 5 satellite. While the 2006 image was detected by NASA's Terra satellite Advanced Spaceborne Thermal Emission and Reflection Radiometer (ASTER) sensor.\n"
       ]
     },
     {
@@ -274,7 +279,8 @@
       "source": [
         "par(mfrow=c(1,2))\n",
         "plotRGB(mato_grosso_1992, r=1, g=2, b=3, stretch=\"lin\")\n",
-        "plotRGB(mato_grosso_2006.res, r=1, g=2, b=3, stretch=\"lin\")"
+        "plotRGB(mato_grosso_2006.res, r=1, g=2, b=3, stretch=\"lin\")\n",
+        "dev.off()"
       ],
       "execution_count": null,
       "outputs": []
@@ -313,8 +319,7 @@
         "The classification of remotely sensed images consists in associating each pixel of the image with a specific class or category (e.g. grassland, forest, water, soil, etc.).\n",
         "Identification occurs through a process in which the degree of spectral similarity or association is high between pixels of the same category and low between pixels of distinct categories.\n",
         "\n",
-        ">It uses unsupervised learning methods to classify the two images of Mato Grosso in Brazil. Define a number of classes k to estimate the forest area lost from 1992 to 2006 or changes in land cover.\n",
-        "\n",
+        "It uses *Unsupervised Learning* methods to classify the two images of Mato Grosso in Brazil. Define a number of classes k to estimate the forest area lost from 1992 to 2006 or changes in land cover.\n",
         "[K-means](https://en.wikipedia.org/wiki/K-means_clustering) clustering is one of the simplest and popular unsupervised learning algorithms.\n",
         "Typically, unsupervised algorithms make inferences from datasets using only input vectors without referring to known, or labeled, outcomes.\n",
         "\n",
