Creato con Colaboratory

--- a/R_code_variability.ipynb
+++ b/R_code_variability.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_variability.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO9HKwxxKoL1zQShmh/D6HO"
+      "authorship_tag": "ABX9TyNnJSIQRtBrl1ozch3lAYFO"
     },
     "kernelspec": {
       "name": "ir",
@@ -438,7 +438,6 @@
         "scale_fill_viridis() +\n",
         "ggtitle(\"Standard deviation of PC1 by viridis colour scale\")\n",
         "\n",
-        "\n",
         "ggplot() +\n",
         "geom_raster(pc1.sd3, mapping = aes(x = x, y = y, fill = layer)) +\n",
         "scale_fill_viridis(option = \"magma\") +\n",
@@ -447,7 +446,7 @@
         "ggplot() +\n",
         "geom_raster(pc1.sd3, mapping = aes(x = x, y = y, fill = layer)) +\n",
         "scale_fill_viridis(option = \"turbo\") +\n",
-        "ggtitle(\"Standard deviation of PC1 by turbo colour scale\")\n"
+        "ggtitle(\"Standard deviation of PC1 by turbo colour scale\")"
       ],
       "execution_count": 29,
       "outputs": []
